--- a/shelly/plotlyjs/static/plotlyjs/src/fonts/ploticon/_ploticon.scss
+++ b/shelly/plotlyjs/static/plotlyjs/src/fonts/ploticon/_ploticon.scss
@@ -35,3 +35,5 @@
 .plotlyjsicon-tooltip_basic:before { content: '\e808'; } /* '' */
 .plotlyjsicon-tooltip_compare:before { content: '\e809'; } /* '' */
 .plotlyjsicon-plotlylogo:before { content: '\e80a'; } /* '' */
+.ploticon-z-axis:before { content: '\e80b'; } /* '' */
+.ploticon-3d_rotate:before { content: '\e80c'; } /* '' */
