--- a/shelly/plotlyjs/static/plotlyjs/src/fonts/ploticon/_ploticon.scss
+++ b/shelly/plotlyjs/static/plotlyjs/src/fonts/ploticon/_ploticon.scss
@@ -37,3 +37,5 @@
 .plotlyjsicon-plotlylogo:before { content: '\e80a'; } /* '' */
 .ploticon-z-axis:before { content: '\e80b'; } /* '' */
 .ploticon-3d_rotate:before { content: '\e80c'; } /* '' */
+.ploticon-camera:before { content: '\e80d'; } /* '' */
+.ploticon-movie:before { content: '\e80e'; } /* '' */
