add save and edit icon to modebar

--- a/src/fonts/ploticon/_ploticon.scss
+++ b/src/fonts/ploticon/_ploticon.scss
@@ -39,3 +39,4 @@
 .ploticon-3d_rotate:before { content: '\e80c'; } /* '' */
 .ploticon-camera:before { content: '\e80d'; } /* '' */
 .ploticon-movie:before { content: '\e80e'; } /* '' */
+.ploticon-disk:before { content: '\e80f'; } /* '' */
