update scss file with new icon

--- a/src/fonts/ploticon/_ploticon.scss
+++ b/src/fonts/ploticon/_ploticon.scss
@@ -39,4 +39,5 @@
 .ploticon-3d_rotate:before { content: '\e80c'; } /* '' */
 .ploticon-camera:before { content: '\e80d'; } /* '' */
 .ploticon-movie:before { content: '\e80e'; } /* '' */
-.ploticon-disk:before { content: '\e80f'; } /* '' */
+.ploticon-question:before { content: '\e80f'; } /* '' */
+.ploticon-disk:before { content: '\e810'; } /* '' */
