lasso and selectbox skeleton

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -6,5 +6,6 @@
     @import "cursor.scss";
     @import "modebar.scss";
     @import "tooltip.scss";
+    @import "drag.scss";
 }
 @import "notifier.scss";
