add lasso and selectbox icon

--- a/src/fonts/ploticon/_ploticon.scss
+++ b/src/fonts/ploticon/_ploticon.scss
@@ -41,3 +41,5 @@
 .ploticon-movie:before { content: '\e80e'; } /* '' */
 .ploticon-question:before { content: '\e80f'; } /* '' */
 .ploticon-disk:before { content: '\e810'; } /* '' */
+.ploticon-lasso:before { content: '\e811'; } /* '' */
+.ploticon-selectbox:before { content: '\e812'; } /* '' */
