make user-select-none CSS class:
- use it in legend text
- rm now useless user-select purge step in to-svg

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -22,6 +22,10 @@ a {
 
 .crisp { shape-rendering: crispEdges; }
 
+.user-select-none {
+    @include vendor('user-select', none);
+}
+
 //Required for IE11. Other browsers set this by default.
 svg { overflow: hidden; }
 
